Adding dockerfile and docker compose

--- a/book-service/src/main/resources/application.properties
+++ b/book-service/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.data.elasticsearch.cluster-name=book-store-db
-spring.data.elasticsearch.cluster-nodes=localhost:9300
+spring.data.elasticsearch.cluster-name=book-cluster
+spring.data.elasticsearch.cluster-nodes=elasticsearch:9300
+#spring.data.elasticsearch.cluster-nodes=localhost:9300
